--- a/Index/index.html
+++ b/Index/index.html
@@ -27,10 +27,11 @@
     <section id="logo"><img src="n.png"></section>
     <section id="login"></section>
     </header>
-    <nav><nav>	
+    <nav><nav><FONTcolor="white">	
 <a href="index.html ">Inicio</a> |
 <a href="pagina1.html ">Nanotecnología</a> |
 <a href="pagina2.html">IA</a> |
+        </FONT>
 </nav>
 </nav>
     <main>
