--- a/Index/index.html
+++ b/Index/index.html
@@ -8,7 +8,7 @@
         html{background-color: black;}
         body{width: 750px; height: 750px;margin: auto;background-color: pink;}
         header{width: 750px;height: 250px;background-color: yellow;}
-        nav{width: 750px;height: 50px;background-color: blue;}
+        nav{width: 750px;height: 50px;background-color: white;}
         main{width: 750px;height: 400px;background-color: greenyellow;}
         footer{width: 750px;height: 50px;background-color: orange;}
         section#banner{width: 500px; height: 250px;float:left;background-color: black;}
